5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1692_1872.log
== TEST (2019-05-02 15:35:13) 
-- CODE:
x = int(input("valor de x"))
y = int(input("valor de y"))

if x>0 and y>0:
	r = "Q1"
elif x<0 and y>0:
	r = "Q2"
elif x<0 and y<0:
	r = "Q3"
elif x>0 and y<0:
	r = "Q4"
elif x=0:
	r = "Eixo Y"
elif y=0:
	r = "Eixo X"
elif y=0 and x=0:
	r = "Origem"
print(r)
-- ERROR:
File "XXXX", line 12
    elif x=0:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:35:57) 
-- CODE:
x = int(input("valor de x"))
y = int(input("valor de y"))

if x>0 and y>0:
	r = "Q1"
elif x<0 and y>0:
	r = "Q2"
elif x<0 and y<0:
	r = "Q3"
elif x>0 and y<0:
	r = "Q4"
elif x==0:
	r = "Eixo Y"
elif y==0:
	r = "Eixo X"
elif y==0 and x==0:
	r = "Origem"
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:37:58) 
-- CODE:
x = int(input("valor de x"))
y = int(input("valor de y"))

if x>0 and y>0:
	r = "Q1"
elif x<0 and y>0:
	r = "Q2"
elif x<0 and y<0:
	r = "Q3"
elif x>0 and y<0:
	r = "Q4"
elif x==0 and y>0 or y<0:
	r = "Eixo Y"
elif y==0 and x>0 or x<0:
	r = "Eixo X"
elif y==0 and x==0:
	r = "Origem"
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:38:35) 
-- CODE:
x = int(input("valor de x"))
y = int(input("valor de y"))

if x>0 and y>0:
	r = "Q1"
elif x<0 and y>0:
	r = "Q2"
elif x<0 and y<0:
	r = "Q3"
elif x>0 and y<0:
	r = "Q4"
elif x==0 and y>0 or y<0:
	r = "Eixo Y"
elif y==0 and x>0 or x<0:
	r = "Eixo X"
elif y==0 and x==0:
	r = "Origem"
print(r)
-- EXECUTION TIME:
0.185628
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1872/main.py", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:38:54) 
-- CODE:
x = int(input("valor de x"))
y = int(input("valor de y"))

if x>0 and y>0:
	r = "Q1"
elif x<0 and y>0:
	r = "Q2"
elif x<0 and y<0:
	r = "Q3"
elif x>0 and y<0:
	r = "Q4"
elif x==0 and y>0 or y<0:
	r = "Eixo Y"
elif y==0 and x>0 or x<0:
	r = "Eixo X"
elif y==0 and x==0:
	r = "Origem"
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:39:42) 
-- CODE:
x = float(input("valor de x"))
y = float(input("valor de y"))

if x>0 and y>0:
	r = "Q1"
elif x<0 and y>0:
	r = "Q2"
elif x<0 and y<0:
	r = "Q3"
elif x>0 and y<0:
	r = "Q4"
elif x==0 and y>0 or y<0:
	r = "Eixo Y"
elif y==0 and x>0 or x<0:
	r = "Eixo X"
elif y==0 and x==0:
	r = "Origem"
print(r)
-- EXECUTION TIME:
0.146094
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
